--- a/bedrock/firefox/templates/firefox/dev-whatsnew.html
+++ b/bedrock/firefox/templates/firefox/dev-whatsnew.html
@@ -19,11 +19,7 @@
 {% block page_og_url %}{{ url('firefox.developer') }}{% endblock %}
 
 {% block page_og_desc %}
-  {% if l10n_has_tag('meta_update_201503') %}
-    {{_('Built for those who build the Web. Introducing the only browser made for developers.')}}
-  {%- else -%}
-    {{ _('Introducing the only browser made for developers like you.') }}
-  {% endif %}
+  {{_('Built for those who build the Web. Introducing the only browser made for developers.')}}
 {% endblock %}
 
 {% block body_id %}firefox-developer-whatsnew{% endblock %}
@@ -43,7 +39,24 @@
       <p>{{_('Get to know the features that make it the most complete browser for building the Web.')}}</p>
     </header>
     <ul class="features">
-    {% if l10n_has_tag('spring_release') %}
+    {% if l10n_has_tag('firefox_dev_fall') and waffle.switch('firefox-dev-fall') %}
+      <li class="feature">
+        <a href="https://hacks.mozilla.org/2015/11/developer-edition-44-creative-tools-and-more" rel="external">
+          {{ high_res_img('firefox/firstrun/dev/creative-tools.png', {'alt': 'Screenshot', 'width': '300', 'height': '160', 'class': 'screenshot'}) }}
+        </a>
+        <h2>{{_('Visual Editing Tools')}}</h2>
+        <p>{{_('Visually edit CSS and HTML animations playing on the page from the Inspector panel. Verify alignment, dimensions and padding of any element using the Ruler and Measurement tools.')}}</p>
+        <a href="https://hacks.mozilla.org/2015/11/developer-edition-44-creative-tools-and-more" rel="external" class="more">{{_('Learn more about Visual Editing Tools')}}</a>
+      </li>
+      <li class="feature">
+        <a href="http://devtoolschallenger.com/" rel="external">
+          {{ high_res_img('firefox/firstrun/dev/devtools-challenger.png', {'alt': 'Screenshot', 'width': '300', 'height': '160', 'class': 'screenshot'}) }}
+        </a>
+        <h2>{{_('DevTools Challenger')}}</h2>
+        <p>{{_('Use Developer Edition’s visual animation and CSS editing tools to explore the depths of the ocean and interact with the strangest of creatures.')}}</p>
+        <a href="http://devtoolschallenger.com/" rel="external" class="more">{{_('Try DevTools Challenger')}}</a>
+      </li>
+    {%- else -%}
       <li class="feature{% if not LANG.startswith('en-') %} feature-centered{% endif %}">
         <a href="https://developer.mozilla.org/docs/Tools/Performance" rel="external">
           <img src="{{ static('img/firefox/firstrun/dev/feature-performancetools.png') }}" alt="{{ _('Screenshot') }}" class="screenshot">
@@ -68,49 +81,18 @@
           <a href="https://hacks.mozilla.org/?p=28808" rel="external" class="more">{{_('See how you helped')}}</a>
         </li>
       {% endif %}
-    {%- else -%}
-      <li class="feature">
-        <a href="https://www.youtube.com/watch?v=1R9_WdXwUsE" class="video-play" rel="external">
-          <img src="{{ static('img/firefox/developer/feature-webide.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
-        </a>
-        <h2>{{_('WebIDE')}}</h2>
-        <p>{{_('Develop, deploy and debug Firefox OS apps directly in your browser, or on a Firefox OS device, with this tool that replaces App Manager.')}}</p>
-        <a href="https://developer.mozilla.org/docs/Tools/WebIDE" class="more" rel="external">{{_('Learn more about WebIDE')}}</a>
-        <div class="responsive-video-container">
-          <div class="video" data-video-id="1R9_WdXwUsE"></div>
-        </div>
-      </li>
-      <li class="feature">
-        <a href="https://www.youtube.com/watch?v=eH0R10Ga4Hs" class="video-play" rel="external">
-          <img src="{{ static('img/firefox/developer/feature-valence.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
-        </a>
-        <h2>{{_('Valence')}}</h2>
-        <p>{{_('Develop and debug your apps across multiple browsers and devices with this powerful extension that comes pre-installed with Firefox Developer Edition.')}}</p>
-        <a href="https://developer.mozilla.org/docs/Tools/Firefox_Tools_Adapter" class="more" rel="external">{{_('Learn more about Valence')}}</a>
-        <div class="responsive-video-container">
-          <div class="video" data-video-id="eH0R10Ga4Hs"></div>
-        </div>
-      </li>
     {% endif -%}
     </ul>
-    {% if l10n_has_tag('new_doorhanger') %}
-      <div class="notice">
-        <h4>{{ _('Important: Sync your new profile') }}</h4>
-        <p>
-          {{ _('Developer Edition comes with a new profile so you can run it alongside other versions of Firefox.') }} {{ _('To access your bookmarks, browsing history and more, you need to sync the profile with your existing Firefox Account, or create a new one.') }}
-          <a href="https://support.mozilla.org/kb/recover-lost-bookmarks-firefox-developer-edition" rel="external" class="more">{{ _('Learn more') }}</a>
-        </p>
-      </div>
-    {% endif %}
+    <div class="notice">
+      <h4>{{ _('Important: Sync your new profile') }}</h4>
+      <p>
+        {{ _('Developer Edition comes with a new profile so you can run it alongside other versions of Firefox.') }} {{ _('To access your bookmarks, browsing history and more, you need to sync the profile with your existing Firefox Account, or create a new one.') }}
+        <a href="https://support.mozilla.org/kb/recover-lost-bookmarks-firefox-developer-edition" rel="external" class="more">{{ _('Learn more') }}</a>
+      </p>
+    </div>
   </section>
 </main>
 
 {% endblock %}
 
 {% block email_form %}{% endblock %}
-
-{% block js %}
-  {% if not l10n_has_tag('spring_release') %}
-    {% javascript 'firefox_developer_whatsnew' %}
-  {% endif %}
-{% endblock %}
