--- a/media/css/firefox/family/index.less
+++ b/media/css/firefox/family/index.less
@@ -9,7 +9,7 @@
 
     #outer-wrapper {
         .aurora-bars();
-        border-top: 4px solid #fff;
+        border-top: 2px solid #fff;
     }
 
     #wrapper {
@@ -50,15 +50,13 @@
 
 // Handy sprite mixin
 .fxfamily-sprite(@posx, @posy) {
-    // note: the tabzilla image in this sprite is no longer used
-    background-image: url(/media/img/firefox/family/index/family-sprite.png);
+    .at2x('/media/img/firefox/family/index/family-sprite-11-2015.png', 535px, 1117px);
     background-position: @posx @posy;
     background-repeat: no-repeat;
     overflow: hidden;
     position: absolute;
     display: block;
     content: '';
-    .at2x('/media/img/firefox/family/index/family-sprite.png', 500px, 645px);
 }
 
 
@@ -101,6 +99,10 @@
 
     .btn-close {
         .image-replaced();
+        .at2x('/media/img/firefox/family/index/closex.png', 19px, 19px);
+        background-color: #efefef;
+        background-position: center center;
+        background-repeat: no-repeat;
         border: 0;
         cursor: pointer;
         height: 30px;
@@ -109,8 +111,6 @@
         position: absolute;
         right: 30px;
         top: 10px;
-        background: #efefef url(/media/img/firefox/family/index/closex.png) center center no-repeat;
-        .at2x('/media/img/firefox/family/index/closex.png', 19px, 19px);
 
         &:hover {
             background-color: darken(#efefef, 5%);
@@ -170,17 +170,18 @@ html.ios {
 
     // Fox
     &:after {
+        .at2x('/media/img/firefox/family/index/fox.png', 1184px, 704px);
+        .background-size(1006px 598px);
+        background-position: left bottom;
+        background-repeat: no-repeat;
         content: '';
         display: block;
-        background: url(/media/img/firefox/family/index/fox.png) left bottom no-repeat;
-        .background-size(1006px 598px);
         width: 1006px;
         height: 598px;
         position: absolute;
         bottom: 0;
         left: 50%;
         margin-left: 30px;
-        .at2x('/media/img/firefox/family/index/fox.png', 1184px, 704px);
     }
 
     .content {
@@ -295,20 +296,38 @@ html[dir="rtl"] #header h1 {
 
 
 /*--------------------------------------------------------------------------*/
-// Primary tier - Desktop, Android, OS
+// Primary tier - Desktop, Android, iOS, Firefox OS
 #products-primary {
     background: #00a7e0;
     border-top: 1px solid rgba(0, 0, 0, .1);
 
     .product {
-        padding: 40px @gridGutterWidth 130px;
+        padding: 40px @gridGutterWidth 140px;
 
         @media only screen and (min-width: @breakDesktopWide) {
-            padding: 50px (@gridGutterWidth * 2) 180px;
+            padding: 50px (@gridGutterWidth * 2) 160px;
+        }
+    }
+
+    &.ios-active {
+        .product-list {
+            flex-wrap: wrap;
         }
 
-        @media only screen and (max-width: @breakDesktop) and (min-width: @breakTablet) {
-            padding: 40px @gridGutterWidth 130px;
+        .product {
+            width: 50%;
+
+            &:before {
+                content: '';
+                display: block;
+                width: 200%;
+                height: 30px;
+                position: absolute;
+                left: 50%;
+                bottom: -15px;
+                margin-left: -100%;
+                #gradient > .radial(center, center, ellipse, farthest-side, rgba(0, 0, 0, .25) 0%, rgba(0, 0, 0, 0) 50%);
+            }
         }
     }
 
@@ -355,9 +374,11 @@ html[dir="rtl"] #header h1 {
 
     // Highlighted product
     .highlight {
-        background: #ffcd02 url(/media/img/firefox/family/index/promo-bg.png) center top no-repeat;
-        color: #e14164;
         .at2x('/media/img/firefox/family/index/promo-bg.png', 600px, 450px);
+        background-color: #ffcd02;
+        background-position: center top;
+        background-repeat: no-repeat;
+        color: #e14164;
 
         a {
             color: #e14164;
@@ -387,20 +408,21 @@ html[dir="rtl"] #header h1 {
 // Firefox for Android
 #product-android {
     &:after {
+        .fxfamily-sprite(0, -644px);
+        width: 268px;
+        height: 181px;
+        left: 50%;
+        bottom: -50px;
+        margin-left: -134px;
+    }
+
+    &.highlight:after {
         .fxfamily-sprite(0, -225px);
         width: 470px;
         height: 176px;
         left: -270px;
-        bottom: -45px;
-    }
-
-    // Android mascot
-    &:before {
-        .fxfamily-sprite(-225px, -405px);
-        width: 115px;
-        height: 125px;
-        top: -50px;
-        left: -50px;
+        bottom: -50px;
+        margin: 0;
     }
 
     // Google Play button
@@ -412,7 +434,7 @@ html[dir="rtl"] #header h1 {
     }
 
     .download-other {
-        clear: both;    
+        clear: both;
         display: block;
         .font-size(11px);
         .open-sans();
@@ -421,50 +443,59 @@ html[dir="rtl"] #header h1 {
     @media only screen and (min-width: @breakDesktopWide) {
         &:after {
             left: -160px;
-            bottom: 0;
+            bottom: -40px;
         }
 
-        &:before {
-            top: -30px;
-            left: -45px;
-        }
-
-        .btn-google-play {
-            right: 30px;
-            bottom: 60px;
+        &.highlight:after {
+            left: -160px;
+            bottom: -30px;
         }
     }
 
     @media only screen and (max-width: @breakDesktop) and (min-width: @breakTablet) {
-        &:after {
+        &.highlight:after {
             left: 50%;
+            right: auto;
             bottom: -55px;
             margin-left: -235px;
         }
 
-        &:before {
-            top: -30px;
-            left: -45px;
-        }
-
         .btn-google-play {
             position: static;
+            margin: 10px auto -10px;
         }
     }
 
     @media only screen and (min-width: @breakMobileLandscape) and (max-width: @breakTablet) {
-        &:after {
+        &.highlight:after {
             left: 50%;
+            right: auto;
             bottom: -55px;
             margin-left: -235px;
         }
 
-        &:before {
-            top: -30px;
-        }
-
         .btn-google-play {
             position: static;
+            margin: 10px auto -10px;
+        }
+    }
+}
+
+// iOS
+#product-ios {
+    &.highlight:after {
+        .fxfamily-sprite(0, -825px);
+        width: 382px;
+        height: 160px;
+        bottom: -25px;
+        left: 50%;
+        margin-left: -191px;
+    }
+
+    @media only screen and (min-width: @breakDesktopWide) {
+        &.highlight:after {
+            right: 10px;
+            bottom: -10px;
         }
     }
 }
@@ -474,7 +505,7 @@ html[dir="rtl"] #header h1 {
     .fxfamily-sprite(0, -405px);
     width: 224px;
     height: 146px;
-    bottom: -20px;
+    bottom: -10px;
     left: 50%;
     margin-left: -112px;
 
@@ -485,7 +516,7 @@ html[dir="rtl"] #header h1 {
 
 
 /*--------------------------------------------------------------------------*/
-// Secondary tier - Hello, Marketplace, Sync
+// Secondary tier - Hello, Sync, Private Browsing
 #products-secondary {
     background: #efefef;
     border-top: 1px solid rgba(0, 0, 0, .1);
@@ -551,13 +582,18 @@ html[dir='rtl'] {
         left: auto;
         right: 30px;
     }
+
+    #product-private-browsing h2:before {
+        left: auto;
+        right: 10px;
+    }
 }
 
 // Sync
 #product-sync h2:before {
     .fxfamily-sprite(-345px, -405px);
     width: 120px;
-    height: 81px;
+    height: 80px;
     top: 32px;
     left: 10px;
 }
@@ -575,12 +611,23 @@ html[dir='rtl'] {
     // New window icon
     h2:after {
         content: '';
+        .fxfamily-sprite(-344px, -515px);
         width: 14px;
         height: 14px;
-        background: url(/media/img/firefox/family/index/family-sprite.png) -344px -515px no-repeat;
         display: inline-block;
+        position: static;
         margin: 0 8px;
-        .at2x('/media/img/firefox/family/index/family-sprite.png', 500px, 645px);
+    }
+}
+
+// Private Browsing
+#product-private-browsing {
+    h2:before {
+        .fxfamily-sprite(-268px, -555px);
+        width: 130px;
+        height: 70px;
+        top: 40px;
+        left: 0;
     }
 }
 
@@ -603,8 +650,8 @@ html[dir='rtl'] {
         left: 30px;
     }
 
-    #product-marketplace h2:before {
-        left: 55px;
+    #product-private-browsing h2:before {
+        left: 10px;
     }
 
     html[dir='rtl'] {
@@ -622,9 +669,9 @@ html[dir='rtl'] {
             right: 30px;
         }
 
-        #product-marketplace h2:before {
+        #product-private-browsing h2:before {
             left: auto;
-            right: 55px;
+            right: 10px;
         }
     }
 
@@ -642,13 +689,13 @@ html[dir='rtl'] {
 
     .mozlogo {
         .image-replaced();
+        .fxfamily-sprite(-344px, -484px);
         display: inline-block;
         margin: 0 auto @baseLine;
-        background: url(/media/img/firefox/family/index/family-sprite.png) -345px -485px no-repeat;
         width: 94px;
         height: 25px;
         float: left;
-        .at2x('/media/img/firefox/family/index/family-sprite.png', 500px, 645px);
+        position: static;
     }
 
     ul {
@@ -701,6 +748,19 @@ html[dir='rtl'] {
                 width: 330px;
                 height: auto;
             }
+        }
+    }
+
+
+    #products-primary.ios-active {
+        .product-list {
+            flex-wrap: nowrap;
+        }
+
+        .product {
+            width: 25%;
+            border: 0;
+            box-shadow: none;
         }
     }
 
@@ -758,6 +818,10 @@ html[dir='rtl'] {
             width: auto;
         }
 
+        &.ios-active .product {
+            width: auto;
+        }
+
         .highlight {
             background-position: left top;
         }
@@ -793,6 +857,11 @@ html[dir='rtl'] {
     #product-marketplace h2:before {
         top: @baseLine;
         margin-left: -43px;
+    }
+
+    #product-private-browsing h2:before {
+        top: 35px;
+        margin-left: -65px;
     }
 
     html[dir='rtl'] {
@@ -875,6 +944,10 @@ html[dir='rtl'] {
             width: auto;
         }
 
+        &.ios-active .product {
+            width: auto;
+        }
+
         .highlight {
             background-position: left top;
         }
@@ -890,7 +963,7 @@ html[dir='rtl'] {
 
         // Shrink icons by 25%
         h2:before {
-            .background-size(375px 484px);
+            .background-size((535px * .75), (1117px * .75));
         }
     }
 
@@ -918,6 +991,14 @@ html[dir='rtl'] {
         left: 30px;
     }
 
+    #product-private-browsing h2:before {
+        width: 98px;
+        height: 54px;
+        background-position: -(268px * .75) -(555px * .75);
+        top: @baseLine;
+        left: 8px;
+    }
+
     html[dir='rtl'] {
         #products-secondary .product {
             padding: @baseLine 120px @baseLine @gridGutterWidth;
@@ -929,7 +1010,8 @@ html[dir='rtl'] {
             right: 30px;
         }
 
-        #product-sync h2:before {
+        #product-sync h2:before,
+        #product-private-browsing h2:before {
             left: auto;
             right: 15px;
         }
