--- a/bedrock/firefox/templates/firefox/whatsnew_42/variant-a.html
+++ b/bedrock/firefox/templates/firefox/whatsnew_42/variant-a.html
@@ -13,8 +13,7 @@
 {% block body_class %}firefox-up-to-date{% endblock %}
 
 {% block main_subhead %}
-  {# TODO need to update this link to fall back to the Private Browsing product page #}
-  <a class="button-flat-dark" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/" data-highlight="privateWindow" role="button">{{ _('Try the new Private Browsing') }}</a>
+  <a class="button-flat-dark" href="{{ url('firefox.private-browsing') }}" data-highlight="privateWindow" role="button">{{ _('Try the new Private Browsing') }}</a>
 {% endblock %}
 
 {% block private_browsing_cta %}
