Fix Bug 1218583, swap gear and webmaker promos and update content

--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -174,7 +174,17 @@
             <a class="fxos-link" href="{{ url('firefox.desktop.index') }}">{{ _('Learn more') }}</a>
           </div>
         </li>
-      {% if l10n_has_tag('webmaker_promo_introducing') %}
+      {% if l10n_has_tag('gear_promo_eoy') %}
+        <li id="promo-6" class="item promo-large-landscape gear" tabindex="0">
+          <h2 class="primary go">{{ _('Get the gear, <br>support the mission') }}</h2>
+          <a class="panel-link" rel="external" href="https://gear.mozilla.org?ref=holiday2015&amp;utm_campaign=holiday2015&amp;utm_source=mozilla.org&amp;utm_medium=referral" data-promotion-id="promo-6" data-promotion-name="Get the gear, support the mission" data-promotion-class="promo-large-landscape" data-promotion-type="tile">
+            <div class="secondary">
+              <h3>{{ _('Shop for t-shirts, hoodies, hats<br> and more at Mozilla Gear.') }}</h3>
+              <p class="more">{{ _('Shop now') }}</p>
+            </div>
+          </a>
+        </li>
+      {% elif l10n_has_tag('webmaker_promo_introducing') %}
         <li id="promo-6" class="item promo-large-landscape webmaker" tabindex="0">
           <h2 class="primary go">{{ _('Introducing<br> the new Webmaker') }}</h2>
           <a class="panel-link" rel="external" href="https://webmaker.org/" data-promotion-id="promo-6" data-promotion-name="Introducing the new Webmaker" data-promotion-class="promo-large-landscape" data-promotion-type="tile">
@@ -233,10 +243,10 @@
           </a>
         </li>
       {% endif %}
-      {% if l10n_has_tag('gear_store') %}
-        <li id="promo-9" class="item promo-small-landscape gear">
-          <a class="panel-link" href="https://gear.mozilla.org/?utm_source=gear.mozilla.org&amp;utm_medium=referral&amp;utm_content=mozillaorg_smallblock" data-promotion-id="promo-9" data-promotion-name="Get gear" data-promotion-class="promo-small-landscape" data-promotion-type="tile">
-            <h2>{{ _('Official Mozilla gear is here') }}</h2>
+      {% if l10n_has_tag('webmaker_promo_introducing') %}
+        <li id="promo-9" class="item promo-small-landscape introducing-webmaker">
+          <a class="panel-link" href="https://webmaker.org/" data-promotion-id="promo-9" data-promotion-name="Introducing the new Webmaker" data-promotion-class="promo-small-landscape" data-promotion-type="tile">
+            <h2>{{ _('Introducing<br> the new Webmaker') }}</h2>
           </a>
         </li>
       {% else %}
