Fix Bug 1195783 - CCK2 is no longer available on AMO.

--- a/bedrock/firefox/templates/firefox/organizations/faq.html
+++ b/bedrock/firefox/templates/firefox/organizations/faq.html
@@ -140,11 +140,11 @@
 
 <h4>{{ _('How do I customize Firefox to meet my organization’s IT policy/requirements?') }}</h4>
 <p>
-{% trans url='https://addons.mozilla.org/firefox/addon/cck2wizard/' %}
+{% trans url='https://mike.kaply.com/cck2/' %}
 	There are several methods that can be used to customize Firefox and the
 	best place to start is the Enterprise Working Group or the Enterprise Wiki
 	page. There are <a href="{{ url }}">add-ons available</a>, as well as
-	third-party organizations who provide customizations services, and the EWG
+	third-party organizations who provide customization services, and the EWG
 	is a good place to discuss requirements if you’re just getting started.
 {% endtrans %}
 </p>
