--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -10,6 +10,10 @@
 .mozid {
     color: #fff;
 
+    #outer-wrapper {
+        .aurora-bars;
+    }
+
     #wrapper {
         width: 100%;
         overflow: hidden;
