Update Website and IRC for MozillaCH

--- a/bedrock/mozorg/templates/mozorg/contact/communities/switzerland.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/switzerland.html
@@ -13,10 +13,10 @@
         <h2>{{ _('Switzerland') }}</h2>
 
         <ul class="extra">
-          <li><a href="http://www.mozilla.de/" class="website">www.mozilla.de</a></li>
+          <li><a href="http://www.mozilla.ch/" class="website">www.mozilla.ch</a></li>
           <li><a href="https://lists.mozilla.org/listinfo/community-switzerland" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="https://twitter.com/MozillaCH" class="twitter">@MozillaCH</a></li>
-          <li><a href="irc://irc.mozilla.org/mozilla.de" class="irc">IRC: #mozilla.de</a></li>
+          <li><a href="irc://irc.mozilla.org/mozilla.ch" class="irc">IRC: #mozilla.ch</a></li>
         </ul>
 
         <figure class="feature-img">
