Bug 1141846 - New Patent page on Mozilla.org with final copy

--- a/bedrock/mozorg/templates/mozorg/about-base.html
+++ b/bedrock/mozorg/templates/mozorg/about-base.html
@@ -12,6 +12,7 @@
     (url('mozorg.about.leadership'),  _('Leadership')),
     (url('mozorg.about.governance.governance'), _('Governance')),
     (url('mozorg.about.forums.forums'), _('Forums')),
+    (url('mozorg.about.patents'), _('Patents')),
 ] -%}
 
 {% block extrahead %}
