Bug 1220883 - Update address and map marker of Beijing office

--- a/bedrock/mozorg/templates/mozorg/contact/spaces/beijing.html
+++ b/bedrock/mozorg/templates/mozorg/contact/spaces/beijing.html
@@ -16,14 +16,14 @@
         {# L10n: Addresses are marked up with hCard microformat and Schema.org. See http://microformats.org/wiki/h-card and http://schema.org/PostalAddress #}
         {% trans %}
           <span class="org">Mozilla Online Ltd.</span><br>
-          <span itemprop="streetAddress" class="street-address">International Club Office Tower 800A <br>21 Jian Guo Men Wai Avenue</span><br>
-          <abbr itemprop="addressRegion" class="region">Chaoyang District</abbr>, <span itemprop="addressLocality" class="locality">Beijing</span> <span itemprop="postalCode" class="postal-code">100020</span><br>
+          <span itemprop="streetAddress" class="street-address">China Resources Building, Suite 1708 <br>8 Jianguomenbei Avenue</span><br>
+          <span itemprop="addressLocality" class="locality">Dongcheng District</span>, <span itemprop="addressRegion" class="region">Beijing</span> <span itemprop="postalCode" class="postal-code">100005</span><br>
           <span itemprop="addressCountry" class="country-name">China</span>
         {% endtrans %}
         </p>
 
         <figure class="feature-img">
-          <img src="//api.tiles.mapbox.com/v4/{{ settings.MAPBOX_TOKEN }}/url-{{ 'mozorg.cdn.mozilla.net/media/img/contact/moz-map-pin.png'|urlencode }}(116.43405,39.909901)/116.43405,39.909901,16/460x250.png?access_token={{ settings.MAPBOX_ACCESS_TOKEN }}" alt="">
+          <img src="//api.tiles.mapbox.com/v4/{{ settings.MAPBOX_TOKEN }}/url-{{ 'mozorg.cdn.mozilla.net/media/img/contact/moz-map-pin.png'|urlencode }}(116.4280,39.9115)/116.4280,39.9115,16/460x250.png?access_token={{ settings.MAPBOX_ACCESS_TOKEN }}" alt="">
         </figure>
       </div>
 
